apps/novnc-desktop/manifests/novnc-desktop.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-desktop
  namespace: novnc
spec:
  selector:
    matchLabels:
      app: remote-desktop
  template:
    metadata:
      labels:
        app: remote-desktop
    spec:
      runtimeClassName: nvidia
      containers:
      - name: remote-desktop
        image: deserializeme/ubuntu-xfce
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1024Mi"
            cpu: "1000m"
          limits:
            memory: "8000Mi"
            cpu: "4000m"
            nvidia.com/gpu: 1
---
apiVersion: v1
kind: Service
metadata:
  name: remote-desktop-service
  namespace: novnc
spec:
  selector:
    app: remote-desktop
  ports:
    - protocol: TCP
      port: 6080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-desktop-ingress
  namespace: novnc
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-signin: "https://vouch.buildstar.online/login?url=$scheme://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err"
    nginx.ingress.kubernetes.io/auth-url: https://vouch.buildstar.online/validate
    nginx.ingress.kubernetes.io/auth-response-headers: X-Vouch-User
    nginx.ingress.kubernetes.io/auth-snippet: |
      auth_request_set $auth_resp_jwt $upstream_http_x_vouch_jwt;
      auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
      auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
spec:
  tls:
    - hosts:
      - novnc.buildstar.online
      secretName: novnc-tls
  rules:
  - host: novnc.buildstar.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: remote-desktop-service
            port:
              number: 6080
